--- a/CurrencyConverter/app/src/main/res/layout/activity_main.xml
+++ b/CurrencyConverter/app/src/main/res/layout/activity_main.xml
@@ -78,9 +78,10 @@
             android:layout_weight="1"
             android:layout_height="fill_parent">
 
-            <Space
-                android:layout_width="match_parent"
+            <Switch
+                android:layout_width="fill_parent"
                 android:layout_height="0dp"
+                android:id="@+id/switchEurUsd"
                 android:layout_weight="1" />
 
             <TextView
